--- a/server/.htaccess
+++ b/server/.htaccess
@@ -6,8 +6,7 @@ Options +FollowSymLinks
 # http://www.htaccesstools.com/hotlink-protection/
 # http://altlab.com/hotlinkchecker.php
 
-RewriteEngine on
-RewriteCond %{HTTP_REFERER} !^$
-RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?yourdomain.com [NC]
-RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?domain2.com [NC]
-RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
+#RewriteEngine on
+#RewriteCond %{HTTP_REFERER} !^$
+#RewriteCond %{HTTP_REFERER} !^http(s)?://(www\.)?yourdomain.com [NC]
+#RewriteRule \.(jpg|jpeg|png|gif)$ - [NC,F,L]
